js262/test/language/expressions/async-function/early-errors-expression-not-simple-assignment-target.js


/*---
author: Brian Terlson <brian.terlson@microsoft.com>
esid: pending
description: >
  Async function expressions are not a simple assignment target.
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

(async function foo() { } = 1)
